welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:54: error: Unmatched closing brace '}' ignored here
}
^